kafka/kafka-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: kafka-se
spec:
  exportTo:
    - "*"
  location: MESH_EXTERNAL
  hosts:
  - "kafka.rezz.io"
  ports:
  - name: tcp-kafka
    number: 9092
    protocol: TCP
  resolution: DNS
